# robotics-mcp

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  README.md  TODO_HANDOFF_INTEGRATION.md  WATCHFILES_README.md  glama.json  health_response.txt  mcpb.json  package-lock.json  package.json  pyproject.toml  requirements.txt  robotics-mcp-watchfiles.service  test_dreame_integration.py  test_drone_init.py  test_robotics_conversational.py  test_tool_registration.py
.github/workflows/: ci.yml
.windsurf/skills/ros-robotics-expert/: README.md  SKILL.md  _toc.md
.windsurf/skills/ros-robotics-expert/modules/: core-concepts.md  navigation-control.md  (+2 more)
Assets/Scripts/: EnvironmentLoader.cs  GaussianSplatRenderer.cs  RobotAnimator.cs  RobotCamera.cs  RobotExporter.cs  RobotNavigator.cs  VbotSpawner.cs
config/: config.yaml.example
data/: workflows.db
docker/: Dockerfile.ros1-melodic  README.md  docker-compose.ros1.yml
docker/scripts/: setup-ros1-workspace.ps1  setup-ros1-workspace.sh
docs/: ADD_WORLDLABS_TO_SCENE.md  AI_RESEARCH_WORKFLOW.md  BLENDER_VRM_WORKFLOW_ROBOTICS.md  COMPONENT_REUSE_HACKS.md  COMPREHENSIVE_NOTES.md  CREATE_SCOUT_MODEL.md  DREAME_CONFIGURATION.md  DREAME_D20_PRO_PLUS_INTEGRATION.md  DREAME_SETUP_GUIDE.md  GLAMA_AI_RESCAN_GUIDE.md  GLAMA_INTEGRATION.md  HUE_BRIDGE_PRO_SETUP.md  IMPORT_LIVING_ROOM_GUIDE.md  IMPORT_NEKOMIMI_VRM_GUIDE.md  IMPORT_SCOUT_TO_UNITY.md  INSTALL_SPZ_PLUGIN.md  LIDAR_GUIDE.md  MARBLE_SPZ_SUPPORT.md  MCP_SERVERS_STATUS.md  MULTI_ROBOT_COORDINATION.md  NEXT_STEPS_AFTER_IMPORT.md  PRIORITY_1_IMPLEMENTATION.md  PROGRESS_REPORT.md  PYROELECTRIC_SENSORS_GUIDE.md  QUICK_IMPORT_GUIDE.md  QUICK_START_VRCHAT.md  RENDER_PLY_SPLATS.md  ROS1_LOCAL_SETUP.md  ROS_FUNDAMENTALS.md  SCOUT_MODEL_CREATION_STATUS.md  SETUP_PREREQUISITES.md  SPZ_PLUGIN_INSTALLATION.md  SPZ_PLUGIN_INSTALLED.md  SPZ_PLUGIN_STATUS.md  TINY_CONTROLLERS_GUIDE.md  TOOL_GAPS_ANALYSIS.md  UNITY_FBX_IMPORT_FIX.md  UNITY_SETUP_GUIDE.md  UNITY_VBOT_INSTANTIATION.md  VIENNA_TECHNICAL_MUSEUM_MAKERSPACE.md  (+7 more)
mcpb/: manifest.json
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/server/: __init__.py  server.py
mcpb/server/tools/: __init__.py  robot_control.py  vbot_crud.py  virtual_robotics.py
mcpb/server/utils/: __init__.py  error_handler.py  state_manager.py
scripts/: build-mcpb.ps1  check-standards.ps1  check_blend_file.py  check_spz_and_install.py  create_mecanum_wheel.py  create_scout.py  create_scout_model.py  demo_dreame_map.py  demo_hue_multi_robot.py  discover_dreame.py  discover_hue_bridge.py  export_dreame_map.py  get_dreame_token.py  import_living_room.py  import_scout_to_unity.py  install-watchfiles.ps1  install_gaussian_splatting.ps1  list_tools.py  run-tests.ps1  run-with-watchfiles.ps1  seed_workflows.py  test_spawn_scout.py  test_wheel_rotation.py  verify_fbx_contents.py  watchfiles_runner.py
src/: check-python.js  lib.rs
src/robotics_mcp/: __main__.py  server.py
src/robotics_mcp/clients/: __init__.py  yahboom_client.py
src/robotics_mcp/integrations/: __init__.py
src/robotics_mcp/services/: __init__.py  workflow_executor.py  workflow_models.py  workflow_storage.py
src/robotics_mcp/tools/: agentic_robotics.py  dreame_client.py  drone_control.py  hue_client.py  robot_animation.py  robot_behavior.py  robot_camera.py  robot_control.py  robot_manufacturing.py  robot_model_tools.py  robot_navigation.py  robot_virtual.py  robotics_system.py  spz_converter.py  vbot_crud.py  virtual_robotics.py  workflow_management.py
src/robotics_mcp/utils/: config_loader.py  mcp_client_helper.py  mock_data.py  response_builders.py
tests/: __init__.py  conftest.py
tests/integration/: test_robot_control_integration.py  test_server.py  test_server_tools.py  test_virtual_robotics_integration.py
tests/unit/: test_config_loader.py  test_config_loader_extended.py  test_error_handler.py  test_robot_animation.py  test_robot_behavior.py  test_robot_camera.py  test_robot_control.py  test_robot_model_tools.py  test_robot_navigation.py  test_robot_virtual.py  test_robotics_system.py  test_spz_converter.py  test_state_manager.py  test_state_manager_extended.py  test_vbot_crud.py  test_virtual_robotics.py  test_virtual_robotics_tool.py
web/: README.md  __init__.py  index.html  script.js  styles.css
