[package]
name = "robotics-mcp-zed-extension"
version = "0.1.0"
edition = "2021"
authors = ["Sandra Schipal <sandraschipal@gmail.com>"]
description = "Zed extension bridge for Robotics MCP server"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
